[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lewanlib"
version = "0.1.0"
description = "Library for controlling bus servos using the LewanSoul Bus Servo Communication Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "NCSU-High-Powered-Rocketry-Club"}
]
license = {text = "MIT"}

dependencies = [
    "pyserial>=3.5",
    "gpiod>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[dependency-groups]
dev = [
    "lgpio>=0.2.2.0",
]
