[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lewanlib"
version = "0.1.0"
description = "Library for controlling bus servos using the LewanSoul Bus Servo Communication Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "NCSU-High-Powered-Rocketry-Club"}
]
license = {text = "MIT"}

dependencies = [
    "msgspec>=0.20.0",
    "numpy>=2.2.6",
    "pyserial>=3.5",
    "pytest>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lewanlib*"]

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
